# tca-pipelines

./: README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
conf/: logging.yml
conf/base/: catalog.yml
data/01_raw/: iar_agencias.csv  iar_canales.csv
src/tca_pipelines/: __init__.py  __main__.py  pipeline_registry.py
src/tca_pipelines/pipelines/azure/: nodes_upload.py  pipeline.py
src/tca_pipelines/pipelines/data_engineering/: nodes.py  pipeline.py
src/tca_pipelines/pipelines/data_science/: nodes_clustering.py  nodes_distribute_data.py  nodes_generate_statistics.py  pipeline.py
